--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   margin-left: auto ;
   margin-right: auto ;
   }
+
   </style>
 
 
@@ -30,12 +31,12 @@
 <body>
   <header>
     <h1>Bun Mi Calculator</h1>
-    <img src="./images/s.png" alt="yelp photo: http://www.yelp.com/biz_photos/bun-me-northridge?select=e9XQ3JE8uUC_H4wQKWkAIA" title="yummy chicken lemongrass bun mi sandwhich">
+    <img src="./images/s.png" alt="yelp photo: http://www.yelp.com/biz_photos/bun-me-northridge?select=e9XQ3JE8uUC_H4wQKWkAIA" title="Chicken lemongrass Bun Mi! sandwich">
   </header>
       
 
   <div id="content">
-          <p><strong>How many <a href="http://www.yelp.com/biz/bun-me-northridge">Bun Mi</a> sandwiches can you buy?</strong></p>
+          <p><strong>How many <a href="http://www.yelp.com/biz/bun-me-northridge">Bun Mi!</a> sandwiches can you buy?</strong></p>
           <button>Find out!</button>
   </div>
 
