added input type number
can get NaN

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   $('button').on('click', function() {
     swal({
       title: 'Enter an amount.',
-      html: '<input id="input-field">',
+      html: '<input id="input-field" type="number">',
       showCancelButton: true,
       confirmButtonText: 'Submit',
       closeOnConfirm: false
